--- a/src/main/resources/static-root/sign-in.html
+++ b/src/main/resources/static-root/sign-in.html
@@ -35,17 +35,17 @@
 <fieldset>
     <legend>Sign in</legend>
     <div>
-        <label for="userName">Username:</label>
+        <label for="username">Username:</label>
         <input type="text" id="username" name="username" required />
     </div>
-    <div>
+    <div class="text">
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" minlength="8" required
                placeholder="8 characters minimum" autocomplete="current-password"  size="12"/>
     </div>
     <div>
         <label for="pin">Code: </label>
-        <input id="pin" type="password" inputmode="numeric">
+        <input id="pin" type="password" inputmode="numeric"/>
     </div>
     <input type="submit" value="Sign in">
 </fieldset>
