--- a/src/main/resources/static-root/index.html
+++ b/src/main/resources/static-root/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
     <title>The Sailors Marketplace</title>
-    <link rel="stylesheet" href="/res/js/jquery-ui.css" />
+    <link rel="stylesheet" href="../res/js/jquery-ui.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/res/css/style.css">
-    <script src="/res/js/jquery-3.3.1.js"></script>
+    <link rel="stylesheet" href="../res/css/style.css">
+    <script src="../res/js/jquery-3.3.1.js"></script>
     <script type="text/javascript">
         (function($) {
             $(document).ready(function() {
