--- a/src/main/resources/static-root/signup.html
+++ b/src/main/resources/static-root/signup.html
@@ -6,18 +6,18 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
 
-    <link rel="stylesheet" type="text/css" href="../js/jquery-ui.css"/>
+    <link rel="stylesheet" type="text/css" href="../res/js/jquery-ui.css"/>
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">-->
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
-    <link rel="stylesheet" type="text/css" href="../css/style.css"/>
-    <script type="text/javascript" src="../js/jquery-3.3.1.js">
+    <link rel="stylesheet" type="text/css" href="../res/css/style.css"/>
+    <script type="text/javascript" src="../res/js/jquery-3.3.1.js">
         var serverContext = "http://localhost:9998";
 
             function register(){
                 $(".alert").html("").hide();
                 $(".error-list").html("");
-                var formData = $('sign-upForm').serialize();
-                $.post(serverContext + "/rest/accounts/create", formData, function(data){
+                var formData = $('registration-form').serialize();
+                $.post(serverContext + "/rest/accounts/reg/", formData, function(data){
                     if(ajax.getSettings().responseFields.json.state() === "success"){
                         window.location.href = serverContext +"/accountsinfo.html";
                     }
@@ -77,7 +77,7 @@
 <body>
     <h1 class="text-center">User Sign Up</h1>
             <div class="rowColor col-sm-6 ui-icon-arrow-1-e html-editor-align-center" id="registration-info">
-                <form class="col-sm-6" id="registration-form" action="/rest/accounts/" method="post">
+                <form class="col-sm-6" id="registration-form" action="/rest/accounts/reg/" method="post">
                     <div class="form-group">
                         <p><label for="email">Email: </label></p>
                         <p><input class="form-control item" type="email" name="email" required="" id="email" placeholder="Ваш Email" aria-label="Ваш email" multiple/></p>
@@ -88,11 +88,15 @@
                         <p><input class="form-control item" type="text" id="username" name="username" required /></p>
                     </div>
                     <div class="form-group">
+                        <p><label for="telephone">Telephone:</label></p>
+                        <p><input class="form-control item" type="text" id="telephone" name="telephone" required /></p>
+                    </div>
+                    <div class="form-group">
                         <p><label for="password">Password:</label></p>
                         <p><input class="form-control item password-field" type="password" id="password" name="password" minlength="8" required="" placeholder="8 characters minimum"/></p>
                     </div>
                     <div class="text-input">
-                        <p><input class="form-select-button" type="submit" name="sign-up" value="Зарегистрироваться"/></p>
+                        <p><input class="form-select-button" type="submit" name="sign-up" value="Зарегистрироваться" onclick="register()"/></p>
                     </div>
                 </form>
             </div>
