--- a/src/main/resources/static-root/index.html
+++ b/src/main/resources/static-root/index.html
@@ -17,7 +17,7 @@
                         $('<p>').html('Raw response: <code>' + JSON.stringify(data) + '</code>').appendTo('#raw');
                         $('<p>').html('Output: ').appendTo('#result');
                         $('<p>').html('Operation: ' + data.operation).appendTo('#result');
-                        $('<p>').html('<br>Left: ' + data.username).appendTo('#result');
+                        $('<p>').html('<br>Left: ' + data.email).appendTo('#result');
                         $('<p>').html('<br>Right: ' + data.lastname).appendTo('#result');
                         $('<p>').html('<br>Result: ' + data.email).appendTo('#result');
                     })
