--- a/src/main/resources/static-root/sign-in.html
+++ b/src/main/resources/static-root/sign-in.html
@@ -35,8 +35,8 @@
 <fieldset>
     <legend>Sign in</legend>
     <div>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required />
+        <label for="email">Username:</label>
+        <input type="text" id="email" name="email" required />
     </div>
     <div class="text">
         <label for="password">Password:</label>
