--- a/src/main/resources/static-root/signup.html
+++ b/src/main/resources/static-root/signup.html
@@ -84,8 +84,8 @@
                         <p><span class="alert alert-danger col-sm-4" id="emailError" style="display:inline-block"></span></p>
                     </div>
                     <div class="form-group">
-                        <p><label for="username">Username:</label></p>
-                        <p><input class="form-control item" type="text" id="username" name="username" required /></p>
+                        <p><label for="email">Username:</label></p>
+                        <p><input class="form-control item" type="text" id="email" name="email" required /></p>
                     </div>
                     <div class="form-group">
                         <p><label for="telephone">Telephone:</label></p>
